[metadata]
version=1.0

[bdist_wheel]
universal=1

[flake8]
exclude=.tox
max-line-length=120

[isort]
line_length=120
skip_glob=.tox
not_skip=__init__.py

[options]
install_requires =
  pygments
  fluent.syntax
  six

[options.entry_points]
pygments.lexers =
    fluent=fluent.pygments.lexer:FluentLexer
