[project]
name = "fluent.syntax"
version = "0.19.0"
requires-python = ">= 3.8"
dependencies = ["typing-extensions>=3.7,<5"]
license = { text = "Apache-2.0" }
description = "Localization library for expressive translations."
keywords = ["fluent", "localization", "l10n"]
authors = [
  { name = "Mozilla", email = "l10n-drivers@mozilla.org" },
  { name = "Eemeli Aro", email = "eemeli@mozilla.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
repository = "https://github.com/projectfluent/python-fluent"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
